# code-format

./: Makefile  config.h.in  meson.build
source/: format.c  plugin.c  prefs.c  prefs.h  process.c  style.c
tools/: PKGBUILD.arch
